[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bt_api_exmo"
version = "0.1.0"
description = "EXMO exchange plugin for bt_api"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["bt_api_base"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/bt_api_exmo"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["I", "UP", "E", "F", "W", "E999", "TRY003"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["I001", "UP037"]